--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
+<textarea id="bar">Mussum ipsum cacilds...</textarea>
+
+<!-- Trigger -->
+<button class="btn" data-clipboard-action="cut" data-clipboard-target="#bar">
+    Cut to clipboard
+</button>
+<button id="stop">
+    stop
+</button>
 <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
+<script src="node_modules/clipboard/dist/clipboard.min.js"></script>
 <script src="src/main.js"></script>
 </body>
 </html>
