--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
-<textarea id="bar">Mussum ipsum cacilds...</textarea>
+
+<!-- Target -->
+<textarea id="bar">Stats</textarea>
 
 <!-- Trigger -->
 <button class="btn" data-clipboard-action="cut" data-clipboard-target="#bar">
@@ -16,6 +18,7 @@
 <button id="stop">
     stop
 </button>
+
 <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
 <script src="node_modules/clipboard/dist/clipboard.min.js"></script>
 <script src="src/main.js"></script>
