Fixing bug with statistics

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     Cut to clipboard
 </button>
 <button id="stop">
-    stop
+    stop logging
 </button>
 
 <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
