--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
 <!-- Target -->
-<textarea id="bar">Stats</textarea>
+<textarea id="bar" readonly>Stats</textarea>
 
 <!-- Trigger -->
 <button class="btn" data-clipboard-action="cut" data-clipboard-target="#bar">
-    Cut to clipboard
+    copy to clipboard
 </button>
 <button id="stop">
     stop logging
